# devourer

./: .gitpod.Dockerfile  .gitpod.yml  Dockerfile  README.md  devourer.py  docker-compose-test.yaml  docker-compose.yaml  docker-entrypoint.sh  main.py  pyproject.toml  run.sh  tests.sh
cargo/: Dockerfile  cargo.py  pyproject.toml
devourer/: .pylintrc  Dockerfile  devourer.py  docker-entrypoint.sh  pyproject.toml  tests.sh
