[tool.poetry]
name = "devourer"
version = "1.0.0"
description = ""
authors = ["terminaldweller <thabogre@gmail.com>"]
license = "GPL3.0"

[tool.poetry.dependencies]
python = "^3.8"
newspaper3k = "^0.2.8"
beautifulsoup4 = "^4.9.3"
readability-lxml = "^0.8.1"
gtts = "^2.2.3"
tika = "^1.24"
nltk = "^3.6.3"
tensorflow = "^2.6.0"
torch = "^1.9.1"
transformers = "^4.11.2"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
refextract = "^1.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
